# mcp-test-repo-qt-project

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  untitled2_yue_CN.ts
